--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -7,6 +7,7 @@
   <title>Uplands menu</title>
 
   <link rel="icon" type="image/png" href="/assets/img/logo.png">
+  <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 </head>
 <body>
