--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -11,6 +11,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 </head>
 <body>
-  <div id="app"></div>
+  <div class="bg-image" id="app"></div>
 </body>
 </html>
