--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Uplands menu</title>
+  <title>Svantes menu</title>
 
   <link rel="icon" type="image/png" href="/assets/img/logo.png">
   <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
