fixed various things

--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="Svantes,Pub, Källare, Trädgård, Garden, Uplands, Nation, Menu, Uppsala, Beers, Ciders, Food, Drinks">
+  <meta name="description" content="Menu for the pub at Uplands Nation">
 
   <title>Svantes menu</title>
 
