--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176725373-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-176725373-1');
+</script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="Svantes,Pub, Källare, Trädgård, Garden, Uplands, Nation, Menu, Uppsala, Beers, Ciders, Food, Drinks">
@@ -11,6 +20,8 @@
   <link rel="icon" type="image/png" href="/assets/img/logo.png">
   <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+
+
 </head>
 <body>
   <div class="bg-image" id="app"></div>
